# PointCloudTo3DModell

./: Abschlusspräsentation_20170124.odp  Abschlusspräsentation_20170124.pptx  Projekt_PCL-V20170124_1.doc  Projekt_PCL-V20170126.doc  README.md  align.sh  test.sh  workflow1.sh  workflow2.sh  workflow4.sh  workflow5-extracted-balken.sh  workflow5-merge-result.sh  workflow5.sh
Extracting/src/: CMakeLists.txt  backup.txt  extracting.cpp  trashcan.txt
merge_and_downsample/src/: CMakeLists.txt
toolbox/: CMakeLists.txt  helpers.h  toolbox.cpp
